[Thien] deploy to vps
